--- a/README.adoc
+++ b/README.adoc
@@ -105,7 +105,7 @@ And we'll receive:
 
 === Error handling
 
-By default `RestClient` will throw a subclass of `RestClientException` upon a `4\\**` or `5**`, but we can override this using `onStatus`
+By default, `RestClient` will throw a subclass of `RestClientException` upon a `4\\**` or `5**` status code, but we can override this using `onStatus`
 so that we can define our own status handlers:
 
 [code,java]
@@ -117,7 +117,7 @@ so that we can define our own status handlers:
 
 === More granular control
 
-In some cases we might want to do some more advanced things for which we need access to the underlying `HTTP request` or `HTTP response`.
+In some cases, we might want to do some more advanced things for which we need access to the underlying `HTTP request` or `HTTP response`.
 This can be achieved by using `exchange`.
 
 *note*: Status handlers are not applied when using `exchange` as you already have full access to the response, so you can perform any needed error handling.
@@ -137,7 +137,7 @@ return this.restClient
 
 == Wrap-up
 
-I hope this shed some light on the how, and why.
+I hope this shed some light on the how, and why. And if you're adding `Webflux` just to make use of `WebClient` please consider changing to `RestClient`.
 
 In case you want to read a bit more about this:
 
